--- a/registration.html
+++ b/registration.html
@@ -23,7 +23,7 @@
                 <optgroup label="What is your profession?">
                     <option value="12" selected="">Student</option>
                     <option value="13">TA</option>
-                    <option value="14">Profession</option>
+                    <option value="14">Professor</option>
                 </optgroup>
             </select>
             <div class="mb-3"><a class="btn btn-primary d-block w-100" role="button" href="home.html">Register</a><a class="btn btn-primary d-block w-100" role="button" href="home.html"><i class="fa fa-google"></i>&nbsp;Sign in with Google&nbsp;</a></div><a class="forgot" href="index.html" style="text-align: right;height: 13px;">Already have an account? Log in</a>
