--- a/home.html
+++ b/home.html
@@ -11,7 +11,46 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
+<style>
+    body{
+        background-image: url(assets/img/davis.jpg);
+        background-size: 100% 
+
+    }
+</style>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #093c61;">
+        <a class="navbar-brand" href="home.html">
+            <img src="assets/img/UniHourZ-logo2.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            UniHourz
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="home.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="staff.html">Staff</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="mt-5 mx-5">
+        <div class="card" style="width: 18rem; background-color: #abcde6">
+            <img class="card-img-top" src="assets/img/star-sky.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">No Courses Found</h5>
+                <p class="card-text">No courses were found for this account. Please click the link below to join a
+                    course.</p>
+                <a href="join_course.html" class="btn btn-primary btn-lg active" style="background-color: #1e567e" role="button" aria-pressed="true">Join a Course</a>
+            </div>
+        </div>
+    </div>
+
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
 
