--- a/registration.html
+++ b/registration.html
@@ -19,7 +19,7 @@
                 <h4 style="color: rgb(255,255,255);">Sign up</h4>
             </div>
             <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Email"></div>
-            <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"><input class="form-control" type="password" name="password-repeat" placeholder="Password (repeat)" style="height: 57px;"></div><select class="form-select">
+            <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"><input class="form-control" type="password" name="password-repeat" placeholder="Confirm Password" style="height: 57px;"></div><select class="form-select">
                 <optgroup label="What is your profession?">
                     <option value="12" selected="">Student</option>
                     <option value="13">TA</option>
