Finished basic structure of home page #21
Finished basic structure of UniHourz home page

--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
 <style>
     body{
         background-image: url(assets/img/davis.jpg);
-        background-size: 100% 
-
+        background-size: 100% ;
+        background-repeat: no-repeat;
     }
 </style>
 <body>
