Updated login/registration page #36
-Removed Sign in with Google
-Updated dropdown menu
-New field in registration
-Removing the extra dockerfile

--- a/registration.html
+++ b/registration.html
@@ -18,15 +18,15 @@
             <div class="illustration"><img src="assets/img/UniHourZ-logo2.png" style="width: 218px;">
                 <h4 style="color: rgb(255,255,255);">Sign up</h4>
             </div>
+            <div class="mb-3"><input class="form-control" type="name" name="name" placeholder="Name"></div>
             <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="Email"></div>
             <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"><input class="form-control" type="password" name="password-repeat" placeholder="Confirm Password" style="height: 57px;"></div><select class="form-select">
                 <optgroup label="What is your profession?">
                     <option value="12" selected="">Student</option>
-                    <option value="13">TA</option>
-                    <option value="14">Professor</option>
+                    <option value="13">Instructor</option>
                 </optgroup>
             </select>
-            <div class="mb-3"><a class="btn btn-primary d-block w-100" role="button" href="home.html">Register</a><a class="btn btn-primary d-block w-100" role="button" href="home.html"><i class="fa fa-google"></i>&nbsp;Sign in with Google&nbsp;</a></div><a class="forgot" href="index.html" style="text-align: right;height: 13px;">Already have an account? Log in</a>
+            <div class="mb-3"><a class="btn btn-primary d-block w-100" role="button" href="home.html">Register</a></div><a class="forgot" href="index.html" style="text-align: right;height: 13px;">Already have an account? Log in</a>
         </form>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
