--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h4>Login to your account</h4><input class="form-control" type="email" name="email" placeholder="Email">
             </div>
             <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"></div>
-            <div class="mb-3"><a class="btn btn-primary d-block w-100" role="button" href="home.html">Log In</a></div><a class="btn btn-primary d-block w-100" role="button" href="home.html"><i class="fa fa-google"></i>&nbsp;Sign in with Google&nbsp;</a><a class="forgot" href="#" style="width: 224px;height: 24px;padding: 7px;">Forgot your email or password?</a><a class="forgot" href="registration.html" style="text-align: right;height: 13px;">Create an account</a>
+            <div class="mb-3"><a class="btn btn-primary d-block w-100" role="button" href="home.html">Log In</a></div><a class="forgot" href="#" style="width: 224px;height: 24px;padding: 7px;">Forgot your email or password?</a><a class="forgot" href="registration.html" style="text-align: right;height: 13px;">Create an account</a>
         </form>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
