successfuly implemented the verification of buffalo.edu feature on the backend. An error message now appears on the login screen if a user tries to force a login through inspect element - #26

--- a/index.html
+++ b/index.html
@@ -1,28 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
     <title>CSE_442</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-</head>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+  </head>
 
-<body>
+  <body>
     <section class="login-dark">
-        <form method="post">
-            <h2 class="visually-hidden">Login Form</h2>
-            <div class="illustration"><img src="assets/img/UniHourZ-logo2.png" style="width: 218px;"></div>
-            <div class="mb-3">
-                <h4>Login to your account</h4><input class="form-control" type="email" name="email" placeholder="Enter your buffalo.edu email" required="" pattern=".+@buffalo\.edu">
-            </div>
-            <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password" required=""></div>
-            <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Log In</button></div><a class="forgot" href="#" style="width: 224px;height: 24px;padding: 7px;">Forgot your email or password?</a><a class="forgot" href="registration.html" style="text-align: right;height: 13px;">Create an account</a>
-        </form>
+      <form method="post">
+        <h2 class="visually-hidden">Login Form</h2>
+        <div class="illustration">
+          <img src="assets/img/UniHourZ-logo2.png" style="width: 218px" />
+        </div>
+        <div class="mb-3">
+          <h4>Login to your account</h4>
+          <input
+            id="inputemail"
+            class="form-control"
+            type="email"
+            name="email"
+            placeholder="Enter your buffalo.edu email"
+            required=""
+            pattern=".+@buffalo\.edu"
+          />
+        </div>
+        <div class="mb-3">
+          <input
+            id="password"
+            class="form-control"
+            type="password"
+            name="password"
+            placeholder="Password"
+            required=""
+          />
+        </div>
+        <div class="mb-3">
+          <button
+            class="btn btn-primary d-block w-100"
+            type="submit"
+            onclick="submitLogin();"
+          >
+            Log In
+          </button>
+        </div>
+        <p id="errormsg"></p>
+        <a
+          class="forgot"
+          href="#"
+          style="width: 224px; height: 24px; padding: 7px"
+          >Forgot your email or password?</a
+        ><a
+          class="forgot"
+          href="registration.html"
+          style="text-align: right; height: 13px"
+          >Create an account</a
+        >
+      </form>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-</body>
-
+    <script src="assets/frontendjs/login.js"></script>
+  </body>
 </html>
