"Modfied the makefile to work with a test version of the firebase database; Switched to a robust email validation library instead of regex; refractored the firebase-app.py into firebaseAPI.py; created a file for Registration.py and updated requirements.txt-#42"

--- a/registration.html
+++ b/registration.html
@@ -62,9 +62,9 @@
             minlength="6"
           />
         </div>
-        <select class="form-select" required="">
+        <select class="form-select" id="reg_select" required="">
           <optgroup label="What is your profession?">
-            <option value="12" selected="">Student</option>
+            <option value="12">Student</option>
             <option value="14">Instructor</option>
           </optgroup></select
         ><span id="message"></span>
