Added error messages for incorrect logins #32
Added error messages to the login page which display if a user enters an email or password incorrectly. Also added welcome message on homepage.

--- a/home.html
+++ b/home.html
@@ -37,6 +37,9 @@
                 </li>
             </ul>
         </div>
+        <div class="navbar-nav ml-auto">
+            <p class="nav-link">Hello, {{username}}</p>
+        </div>
     </nav>
 
     <div class="mt-5 mx-5">
