--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <h4>Login to your account</h4><input class="form-control" type="email" name="email" placeholder="Email">
             </div>
             <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"></div>
+            <div class="mb-3">
+                <h5 style="color: Tomato">{{errormessage}}</h5>
+            </div>
             <div class="mb-3"><input class="btn btn-primary d-block w-100" role="button" type="submit" value="Log In"></div><a class="forgot" href="#" style="width: 224px;height: 24px;padding: 7px;">Forgot your email or password?</a><a class="forgot" href="registration.html" style="text-align: right;height: 13px;">Create an account</a>
         </form>
     </section>
