Implemented a working registration that can connect to firebase, as well as cleaned up and refractored code. However, upon clicking either the registration or login button, there is an http error 405 - method not allowed. It works when I manually submit my information via the console though - #42.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <div class="mb-3">
           <button
             class="btn btn-primary d-block w-100"
+            onclick="submit_login();"
             type="submit"
-            onclick="submitLogin();"
           >
             Log In
           </button>
@@ -65,6 +65,6 @@
       </form>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/frontendjs/login.js"></script>
+    <script src="assets/frontendjs/auth.js"></script>
   </body>
 </html>
