--- a/registration.html
+++ b/registration.html
@@ -28,6 +28,7 @@
             class="form-control"
             type="text"
             name="Name"
+            id="Name"
             placeholder="Name"
             required=""
             pattern="^[\w'\-,.][^0-9_!¡?÷?¿/\\+=@#$%ˆ&amp;*(){}|~<>;:[\]]{2,}$"
@@ -70,7 +71,11 @@
         ><span id="message"></span>
         <p id="errormsg"></p>
         <div class="mb-3">
-          <button class="btn btn-primary d-block w-100" type="submit">
+          <button
+            class="btn btn-primary d-block w-100"
+            onclick="submit_registration();"
+            type="submit"
+          >
             Register
           </button>
         </div>
@@ -83,6 +88,6 @@
       </form>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/frontendjs/login.js"></script>
+    <script src="assets/frontendjs/auth.js"></script>
   </body>
 </html>
