Converted to javascript authentication #32
Changed over to auth.js for authentication through firebase. Failed login functionality still converted as well.

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <div class="navbar-nav ml-auto">
-            <p class="nav-link">Hello, {{username}}</p>
+            <p class="nav-link" id="welcome"></p>
         </div>
     </nav>
 
