--- a/profile.html
+++ b/profile.html
@@ -33,8 +33,33 @@
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/bootstrap/js/bs-init.js"></script>
+    
+  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <!-- <script src="assets/profilebackend/profile.js"></script>
+    <script src="assets/profilebackend/bs-init.js"></script> -->
+
+
+
+   <!--  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+ -->
+
+  <script>
+var config = {
+      apiKey: "AIzaSyB8qHYVB7tIoTKiSwl0pFnc2SZv6rRhZA8",
+      authDomain: "projectdemo-cfd84.firebaseapp.com",
+      databaseURL: "https://projectdemo-cfd84-default-rtdb.firebaseio.com",
+      projectId: "projectdemo-cfd84",
+      storageBucket: "projectdemo-cfd84.appspot.com",
+      messagingSenderId: "1018325850707"
+    };
+    firebase.initializeApp(config);
+  </script>
+<script src="assets/profilebackend/profile.js"></script>
+    <script src="assets/profilebackend/bs-init.js"></script>
 </body>
 
 </html>
