Implemented landing page and updated README #50
Implemented the landing page after login, and updated README with project description.

--- a/landing.html
+++ b/landing.html
@@ -26,10 +26,8 @@
         <div class="row" style="margin: 150px;">
             <div class="col-md-6"><img src="assets/img/1200px-Buffalo_Bulls_Athletic_Logo.svg.png" style="width: 299px;"></div>
             <div class="col-md-6">
-                <h6 id="user-name">Name:</h6>
-                <h6 id="email-add">Email Address:</h6>
-                <h6 id="accu-type">Account type:</h6><a href="password-change.html">Change your current password</a>
-            </div>
+                <h6 id="Landing-Welcome">You have logged in! Welcome!</h6>
+           </div>
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
