--- a/landing.html
+++ b/landing.html
@@ -29,6 +29,8 @@
            </div>
         </div>
     </div>
+    <h3 style="margin: 72px;">Queue</h3>
+    <div class="container" id="queue"></div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     
   <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
