Final firebase auth logout function #43
Finished landing page auth logout function that logs out user from firebase and redirects them to login page.

--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/frontendjs/auth.js"></script>
+    <script src="assets/profilebackend/bs-init.js"></script>
   </body>
 </html>
