--- a/landing.html
+++ b/landing.html
@@ -13,25 +13,30 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background: #1E2833;">
-       <div class="container"><a class="navbar-brand" href="#" style="color: #ffffff;">UniHourZ</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand" href="#" style="color: #ffffff;">UniHourZ</a><button
+                data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-2"><span
+                    class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"></li>
-                </ul><span class="navbar-text actions"> <a class="btn btn-light w-100" role="button" style="background: rgb(33, 74, 128);color: var(--bs-white);" href="index.html">Log out</a></span>
+                </ul><span class="navbar-text actions"> <a class="btn btn-light w-100" role="button"
+                        style="background: rgb(33, 74, 128);color: var(--bs-white);" href="index.html" id="logout">Log
+                        out</a></span>
             </div>
         </div>
     </nav>
     <div class="container">
         <div class="row" style="margin: 150px;">
-            <div class="col-md-6"><img src="assets/img/1200px-Buffalo_Bulls_Athletic_Logo.svg.png" style="width: 299px;"></div>
+            <div class="col-md-6"><img src="assets/img/1200px-Buffalo_Bulls_Athletic_Logo.svg.png"
+                    style="width: 299px;"></div>
             <div class="col-md-6">
                 <h6 id="Landing-Welcome">You have logged in! Welcome!</h6>
-           </div>
+            </div>
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    
-  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <!-- <script src="assets/profilebackend/profile.js"></script>
@@ -39,23 +44,26 @@
 
 
 
-   <!--  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+    <!--  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
  -->
 
-  <script>
-  var config = {
-      apiKey: "AIzaSyB8qHYVB7tIoTKiSwl0pFnc2SZv6rRhZA8",
-      authDomain: "projectdemo-cfd84.firebaseapp.com",
-      databaseURL: "https://projectdemo-cfd84-default-rtdb.firebaseio.com",
-      projectId: "projectdemo-cfd84",
-      storageBucket: "projectdemo-cfd84.appspot.com",
-      messagingSenderId: "1018325850707"
-    };
-    firebase.initializeApp(config);
-  </script>
-<script src="assets/profilebackend/profile.js"></script>
+    <script>
+        var config = {
+            apiKey: "AIzaSyB8qHYVB7tIoTKiSwl0pFnc2SZv6rRhZA8",
+            authDomain: "projectdemo-cfd84.firebaseapp.com",
+            databaseURL: "https://projectdemo-cfd84-default-rtdb.firebaseio.com",
+            projectId: "projectdemo-cfd84",
+            storageBucket: "projectdemo-cfd84.appspot.com",
+            messagingSenderId: "1018325850707"
+        };
+        firebase.initializeApp(config);
+        const auth = firebase.auth();
+        const db = firebase.database()
+
+    </script>
+    <script src="assets/profilebackend/profile.js"></script>
     <script src="assets/profilebackend/bs-init.js"></script>
 </body>
 
