--- a/allcourses.html
+++ b/allcourses.html
@@ -30,11 +30,17 @@
                     <div class="box">
                         <h3 class="name">CSE 250 Queue</h3>
                         <div class="social"><a href="#"><i class="fab fa-discord"></i></a><a href="#"><i class="fas fa-video"></i></a><a href="#"></a></div>
-                        <ul style="padding: -49px;width: 277.984px;margin: 12px;">
-                            <li>Student 1</li>
-                            <li>Student 2</li>
-                            <li>Student 3</li>
-                            <li>Student 4</li>
+                        <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE250q">
+                            <li id="CSE250q1"></li>
+                            <li id="CSE250q2"></li>
+                            <li id="CSE250q3"></li>
+                            <li id="CSE250q4"></li>
+                            <li id="CSE250q5"></li>
+                            <li id="CSE250q6"></li>
+                            <li id="CSE250q7"></li>
+                            <li id="CSE250q8"></li>
+                            <li id="CSE250q9"></li>
+                            <li id="CSE250q10"></li>
                         </ul>
                         <p class="description"></p>
                         <ul class="list-group"></ul>
@@ -44,11 +50,17 @@
                     <div class="box">
                         <h3 class="name">CSE 220 Queue</h3>
                         <div class="social"><a href="#"><i class="fab fa-discord"></i></a><a href="#"><i class="fas fa-video"></i></a><a href="#"></a></div>
-                        <ul style="padding: -49px;width: 277.984px;margin: 12px;">
-                            <li>Student 1</li>
-                            <li>Student 2</li>
-                            <li>Student 3</li>
-                            <li>Student 4</li>
+                        <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE220q">
+                            <li id="CSE220q1"></li>
+                            <li id="CSE220q2"></li>
+                            <li id="CSE220q3"></li>
+                            <li id="CSE220q4"></li>
+                            <li id="CSE220q5"></li>
+                            <li id="CSE220q6"></li>
+                            <li id="CSE220q7"></li>
+                            <li id="CSE220q8"></li>
+                            <li id="CSE220q9"></li>
+                            <li id="CSE220q10"></li>
                         </ul>
                         <p class="description"></p>
                         <ul class="list-group"></ul>
@@ -58,11 +70,17 @@
                     <div class="box">
                         <h3 class="name">CSE 331 Queue</h3>
                         <div class="social"><a href="#"><i class="fab fa-discord"></i></a><a href="#"><i class="fas fa-video"></i></a><a href="#"></a></div>
-                        <ul style="padding: -49px;width: 277.984px;margin: 12px;">
-                            <li>Student 1</li>
-                            <li>Student 2</li>
-                            <li>Student 3</li>
-                            <li>Student 4</li>
+                        <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE331q">
+                            <li id="CSE331q1"></li>
+                            <li id="CSE331q2"></li>
+                            <li id="CSE331q3"></li>
+                            <li id="CSE331q4"></li>
+                            <li id="CSE331q5"></li>
+                            <li id="CSE331q6"></li>
+                            <li id="CSE331q7"></li>
+                            <li id="CSE331q8"></li>
+                            <li id="CSE331q9"></li>
+                            <li id="CSE331q10"></li>
                         </ul>
                         <p class="description"></p>
                         <ul class="list-group"></ul>
@@ -72,6 +90,7 @@
         </div>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/frontendjs/queue.js"></script>
 </body>
 
 </html>
