--- a/landing.html
+++ b/landing.html
@@ -29,8 +29,8 @@
            </div>
         </div>
     </div>
-    <h3 style="margin: 72px;">Queue</h3>
-    <div class="container" id="queue"></div>
+<!--    <h3 style="margin: 72px;">Queue</h3>-->
+<!--    <div class="container" id="queue"></div>-->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     
 
@@ -51,4 +51,3 @@
 </body>
 
 </html>
-S
