moved the login code to the client side - #66

--- a/registration.html
+++ b/registration.html
@@ -89,6 +89,6 @@
       </form>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/frontendjs/auth.js"></script>
+    <script src="assets/frontendjs/Login.js"></script>
   </body>
 </html>
