--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
           />
         </div>
         <div class="mb-3">
-          <h5 style="color: Tomato" id="errorf"></h5>
+          <h6 style="color: Tomato" id="errorf"></h5>
         </div>
         <div class="mb-3">
           <button
             class="btn btn-primary d-block w-100"
-            onclick="submit_login();"
+            id="log in"
             type="submit"
           >
             Log In
@@ -67,6 +67,6 @@
       </form>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/frontendjs/auth.js"></script>
+    <script type="module" src="assets/frontendjs/Login.js"></script>
   </body>
 </html>
