Completley moved the login to the client side to make signing out easier - 66

--- a/landing.html
+++ b/landing.html
@@ -39,6 +39,7 @@
             <a
               class="btn btn-light w-100"
               role="button"
+              id="log out"
               style="background: rgb(33, 74, 128); color: var(--bs-white)"
               href="index.html"
               >Log out</a
@@ -74,7 +75,7 @@
  -->
 
     <script src="assets/profilebackend/profile.js"></script>
-    <script src="assets/frontendjs/Login.js"></script>
+    <script type="module" src="assets/frontendjs/Account.js"></script>
   </body>
 </html>
 S
