--- a/registration.html
+++ b/registration.html
@@ -70,11 +70,11 @@
             <option value="14">Instructor</option>
           </optgroup></select
         ><span id="message"></span>
-        <p id="errormsg"></p>
+        <p style="color: Tomato" id="errormsg"></p>
         <div class="mb-3">
           <button
             class="btn btn-primary d-block w-100"
-            onclick="submit_registration();"
+            id="registerbutton"
             type="submit"
           >
             Register
@@ -89,6 +89,6 @@
       </form>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/frontendjs/Login.js"></script>
+    <script type="module" src="assets/frontendjs/Register.js"></script>
   </body>
 </html>
