--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
-  <body>
+  <body id="mainBody">
     <section class="login-dark">
       <form method="post">
         <h2 class="visually-hidden">Login Form</h2>
