--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
-  <body id="mainBody">
+  <body>
     <section class="login-dark">
       <form method="post">
         <h2 class="visually-hidden">Login Form</h2>
@@ -42,12 +42,12 @@
           />
         </div>
         <div class="mb-3">
-          <h6 style="color: Tomato" id="errorf"></h5>
+          <h5 style="color: Tomato" id="errorf"></h5>
         </div>
         <div class="mb-3">
           <button
             class="btn btn-primary d-block w-100"
-            id="log in"
+            onclick="submit_login();"
             type="submit"
           >
             Log In
@@ -67,6 +67,6 @@
       </form>
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script type="module" src="assets/frontendjs/Login.js"></script>
+    <script src="assets/frontendjs/auth.js"></script>
   </body>
 </html>
