Revert "Updated queues and main file"
This reverts commit 5e2a74e1fe2237270e4627885d47eb7030585fb9.

--- a/allcourses.html
+++ b/allcourses.html
@@ -29,7 +29,7 @@
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box">
                         <h3 class="name">CSE 250 Queue</h3>
-                        <div class="social"><a href="https://discord.gg/v8MtA8rd"><i class="fab fa-discord"></i></a></div>
+                        <div class="social"><a href="#"><i class="fab fa-discord"></i></a><a href="#"><i class="fas fa-video"></i></a><a href="#"></a></div>
                         <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE250q">
                             <li id="CSE250q1"></li>
                             <li id="CSE250q2"></li>
@@ -49,8 +49,7 @@
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box">
                         <h3 class="name">CSE 220 Queue</h3>
-                        <div class="social"><a href="https://discord.gg/v8MtA8rd"><i class="fab fa-discord"></i></a></div>
-
+                        <div class="social"><a href="#"><i class="fab fa-discord"></i></a><a href="#"><i class="fas fa-video"></i></a><a href="#"></a></div>
                         <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE220q">
                             <li id="CSE220q1"></li>
                             <li id="CSE220q2"></li>
@@ -70,8 +69,7 @@
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box">
                         <h3 class="name">CSE 354 Queue</h3>
-                        <div class="social"><a href="https://discord.gg/v8MtA8rd"><i class="fab fa-discord"></i></a></div>
-
+                        <div class="social"><a href="#"><i class="fab fa-discord"></i></a><a href="#"><i class="fas fa-video"></i></a><a href="#"></a></div>
                         <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE354q">
                             <li id="CSE354q1"></li>
                             <li id="CSE354q2"></li>
