added script tag to fix the logout cookie issue #68
Cookies weren't being deleted we added a script file that fixed the issue

--- a/allcourses.html
+++ b/allcourses.html
@@ -93,6 +93,8 @@
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/frontendjs/queue.js"></script>
+    <script type="module" src="assets/frontendjs/Account.js"></script>
+
 </body>
 
 </html>
