Added an id for logout for the cookie to work #68
Cookies were not deleting the id will fix the issue

--- a/allcourses.html
+++ b/allcourses.html
@@ -19,7 +19,7 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link" href="#" style="color: var(--bs-white);">All Courses</a></li>
                     <li class="nav-item"></li>
-                </ul><span class="navbar-text actions"> <a class="btn btn-light w-100" role="button" style="background: rgb(33, 74, 128);color: var(--bs-white);" href="index.html">Log out</a></span>
+                </ul><span class="navbar-text actions"> <a class="btn btn-light w-100" id ="log out" role="button" style="background: rgb(33, 74, 128);color: var(--bs-white);" href="index.html">Log out</a></span>
             </div>
         </div>
     </nav>
