Created background loop to update user's roles and to modify channel names when queues open #81
Created a background loop task through Discord py that will check if a user is registered on the site and to update their role. This background will check also changes the channel names when queues open and close.

--- a/landing.html
+++ b/landing.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    <title>Home</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css" />
+    <title>CSE_442</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
-    <link rel="stylesheet" href="../assets/css/Login-Form-Dark.css" />
-    <link rel="stylesheet" href="../assets/css/Social-Icons.css">
-    <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="../assets/css/Navigation-with-Button.css" />
+    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css" />
+    <link rel="stylesheet" href="assets/css/Navigation-with-Button.css" />
 </head>
 
 <body>
@@ -22,12 +20,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="navbar-nav me-auto">
-                <li class="nav-item"><a class="nav-link" href="student-version-home.html" style="color: var(--bs-white);">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="../courses.html" style="color: var(--bs-white);">Courses</a></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"><a class="nav-link" href="allcourses.html" style="color: var(--bs-white);">All Courses</a></li>
                 </ul>
                 <span class="navbar-text actions">
                     <a class="btn btn-light w-100" role="button" id="log out"
-                        style="background: rgb(33, 74, 128); color: var(--bs-white)" href="../index.html">Log
+                        style="background: rgb(33, 74, 128); color: var(--bs-white)" href="index.html">Log
                         out</a></span>
             </div>
         </div>
@@ -35,19 +33,17 @@
     <div class="container">
         <div class="row" style="margin: 150px">
             <div class="col-md-6">
-                <img src="../assets/img/1200px-Buffalo_Bulls_Athletic_Logo.svg.png" style="width: 250px" />
+                <img src="assets/img/1200px-Buffalo_Bulls_Athletic_Logo.svg.png" style="width: 299px" />
             </div>
             <div class="col-md-6">
-                <h4 style="text-align: center;">You have logged in as Student!</h4>
-                <h4 style="text-align: center;">Please join our discord server to queue up!</h4>
-                <div class="social-icons"><a href="https://discord.gg/XF8AfsxCgm" target="_blank"><i class="fab fa-discord" style="margin: -48px;width: 72px;font-size: 50px;height: 72px;padding: 8px;color: #5865F2;"></i></a></div>
+                <h6 id="Landing-Welcome">You have logged in! Welcome!</h6>
             </div>
         </div>
     </div>
-    <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="../assets/profilebackend/profile.js"></script>
+    <script src="assets/profilebackend/profile.js"></script>
     <script type="module" src="assets/frontendjs/Account.js"></script>
 
 </body>
