Added a server route to all instructor html pages. Checks if the authToken of the sender corresponds to an instructor account. - #86.
If the account does correspond to an instructor account, we return the instructor html files. Else,
we return a 403 error - #86.

--- a/instructor/instructor-version-home.html
+++ b/instructor/instructor-version-home.html
@@ -1,54 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
     <title>Home</title>
     <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+    />
     <link rel="stylesheet" href="../assets/css/Login-Form-Dark.css" />
-    <link rel="stylesheet" href="../assets/css/Social-Icons.css">
-    <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="../assets/css/Social-Icons.css" />
+    <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css" />
 
     <link rel="stylesheet" href="../assets/css/Navigation-with-Button.css" />
-</head>
+  </head>
 
-<body>
-    <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background: #1e2833">
-        <div class="container">
-            <a class="navbar-brand" href="#" style="color: #ffffff">UniHourZ</a><button data-bs-toggle="collapse"
-                class="navbar-toggler" data-bs-target="#navcol-2">
-                <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navcol-2">
-                <ul class="navbar-nav me-auto">
-                <li class="nav-item"><a class="nav-link" href="instructor-version-home.html" style="color: var(--bs-white);">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="../courses.html" style="color: var(--bs-white);">Courses</a></li>
-                </ul>
-                <span class="navbar-text actions">
-                    <a class="btn btn-light w-100" role="button" id="log out"
-                        style="background: rgb(33, 74, 128); color: var(--bs-white)" href="../index.html">Log
-                        out</a></span>
-            </div>
+  <body>
+    <nav
+      class="navbar navbar-light navbar-expand-md navigation-clean-button"
+      style="background: #1e2833"
+    >
+      <div class="container">
+        <a class="navbar-brand" href="#" style="color: #ffffff">UniHourZ</a
+        ><button
+          data-bs-toggle="collapse"
+          class="navbar-toggler"
+          data-bs-target="#navcol-2"
+        >
+          <span class="visually-hidden">Toggle navigation</span
+          ><span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navcol-2">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="instructor-version-home.html"
+                style="color: var(--bs-white)"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="../courses.html"
+                style="color: var(--bs-white)"
+                >Courses</a
+              >
+            </li>
+          </ul>
+          <span class="navbar-text actions">
+            <a
+              class="btn btn-light w-100"
+              role="button"
+              id="log out"
+              style="background: rgb(33, 74, 128); color: var(--bs-white)"
+              href="../index.html"
+              >Log out</a
+            ></span
+          >
         </div>
+      </div>
     </nav>
     <div class="container">
-        <div class="row" style="margin: 150px">
-            <div class="col-md-6">
-                <img src="../assets/img/1200px-Buffalo_Bulls_Athletic_Logo.svg.png" style="width: 250px" />
-            </div>
-            <div class="col-md-6">
-                <h4 style="text-align: center;">You have logged in as Instructor!</h4>               
-            </div>
+      <div class="row" style="margin: 150px">
+        <div class="col-md-6">
+          <img
+            src="../assets/img/1200px-Buffalo_Bulls_Athletic_Logo.svg.png"
+            style="width: 250px"
+          />
         </div>
+        <div class="col-md-6">
+          <h4 style="text-align: center">You have logged in as Instructor!</h4>
+        </div>
+      </div>
     </div>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="../assets/profilebackend/profile.js"></script>
-    <script type="module" src="assets/frontendjs/Account.js"></script>
-
-</body>
-
+    <script type="module" src="../assets/frontendjs/Account.js"></script>
+  </body>
 </html>
