--- a/courses.html
+++ b/courses.html
@@ -30,15 +30,13 @@
             <div class="row people">
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box">
-                        <h3 class="name">CSE 250 <a href="instructor/cse250-settings.html"><i class="fas fa-cogs"></i></a> </h3>
+                        <h3 class="name">CSE 250 <a href="instructor/cse250-settings.html" studenthidden="true" hidden><i class="fas fa-cogs"></i></a> </h3>
                         <h6 id="cse250-instructor">Instructor Name:&nbsp;</h6>
                         <h6 id="cse250-office">Office Hour Location:&nbsp;</h6>
                         <h6 id="cse250-eta">Estimated time to help:&nbsp;</h6>
                         <h6 id="cse250-current-student">Current student being helped:&nbsp;</h6>
-
-                        <h3 style="font-weight: bold;">Queue <button id="cse250-dequeue" class="btn btn-primary btn-sm" type="submit" style="background: var(--bs-red);">Dequeue</button></h3>
+                        <h3 style="font-weight: bold;">Queue <button id="cse250-dequeue" class="btn btn-primary btn-sm" type="submit" style="background: var(--bs-red);" onclick="dequeue_cse250();" studenthidden="true" hidden>Dequeue</button></h3>
                         <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE250q">
-
                             <li id="CSE250q1"></li>
                             <li id="CSE250q2"></li>
                             <li id="CSE250q3"></li>
@@ -56,13 +54,13 @@
                 </div>
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box">
-                        <h3 class="name">CSE 220 <a href="instructor/cse220-settings.html"><i style="color: #65F0BD; "class="fas fa-cogs"></i></a> </h3>
+                        <h3 class="name">CSE 220 <a href="instructor/cse220-settings.html" studenthidden="true" hidden><i style="color: #65F0BD; "class="fas fa-cogs"></i></a> </h3>
                         <h6 id="cse220-instructor">Instructor Name:&nbsp;</h6>
                         <h6 id="cse220-office">Office Hour Location:&nbsp;</h6>
                         <h6 id="cse220-eta">Estimated time to help:&nbsp;</h6>
                         <h6 id="cse220-current-student">Current student being helped:&nbsp;</h6>
 
-                        <h3 style="font-weight: bold;">Queue <button id="cse220-dequeue" class="btn btn-primary btn-sm" type="submit" style="background: #EB942B;">Dequeue</button></h3>
+                        <h3 style="font-weight: bold;">Queue <button id="cse220-dequeue" class="btn btn-primary btn-sm" type="submit" style="background: #EB942B;" studenthidden="true" hidden>Dequeue</button></h3>
 
                         <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE220q">
                             <li id="CSE220q1"></li>
@@ -82,24 +80,24 @@
                 </div>
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box">
-                        <h3 class="name">CSE 331 <a href="instructor/cse331-settings.html"><i style="color: #C2D655; "class="fas fa-cogs"></i></a> </h3>
+                        <h3 class="name">CSE 331 <a href="instructor/cse331-settings.html" studenthidden="true" hidden><i style="color: #C2D655; "class="fas fa-cogs"></i></a> </h3>
                         <h6 id="cse331-instructor">Instructor Name:&nbsp;</h6>
                         <h6 id="cse331-office">Office Hour Location:&nbsp;</h6>
                         <h6 id="cse331-eta">Estimated time to help:&nbsp;</h6>
                         <h6 id="cse331-current-student">Current student being helped:&nbsp;</h6>
-                        <h3 style="font-weight: bold;">Queue <button id="cse331-dequeue" class="btn btn-primary btn-sm" type="submit" style="background: #007A61;">Dequeue</button></h3>
+                        <h3 style="font-weight: bold;">Queue <button id="cse331-dequeue" class="btn btn-primary btn-sm" type="submit" style="background: #007A61;" studenthidden="true" hidden>Dequeue</button></h3>
 
-                        <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE354q">
-                            <li id="CSE354q1"></li>
-                            <li id="CSE354q2"></li>
-                            <li id="CSE354q3"></li>
-                            <li id="CSE354q4"></li>
-                            <li id="CSE354q5"></li>
-                            <li id="CSE354q6"></li>
-                            <li id="CSE354q7"></li>
-                            <li id="CSE354q8"></li>
-                            <li id="CSE354q9"></li>
-                            <li id="CSE354q10"></li>
+                        <ul style="padding: -49px;width: 277.984px;margin: 12px;" id="CSE331q">
+                            <li id="CSE331q1"></li>
+                            <li id="CSE331q2"></li>
+                            <li id="CSE331q3"></li>
+                            <li id="CSE331q4"></li>
+                            <li id="CSE331q5"></li>
+                            <li id="CSE331q6"></li>
+                            <li id="CSE331q7"></li>
+                            <li id="CSE331q8"></li>
+                            <li id="CSE331q9"></li>
+                            <li id="CSE331q10"></li>
                         </ul>
                         <p class="description"></p>
                         <ul class="list-group"></ul>
